--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   data-auto-a11y="true"
 ></script> -->
   <meta charset="utf-8">
-  <title>BankOfAfricaFrontend</title>
+  <title>BankOfAfrica</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
